--- a/common/values-global.yaml
+++ b/common/values-global.yaml
@@ -9,7 +9,7 @@ global:
     # Account is the user or organization under which the pattern repos lives 
     account: jianrzha
     email: jianrzha@redhat.com
-    dev_revision: main
+    dev_revision: my-branch
 
 main:
   clusterGroupName: example
